--- a/style.css
+++ b/style.css
@@ -130,20 +130,23 @@ hr {
     background-color: var(--main-bg);
 }
 
-.user img {
-    width: 15%;
-    border: 1px solid;
-    border-radius: 50%;
-    padding: 1px;
-    background-color: var(--small-text);
+.site-head {
+    height: 90px;
+    width: calc(100%-15%);
+    background-color: var(--head-bg);
     display: flex;
+    justify-content: flex-end;
     align-items: center;
 }
 
-.site-head {
-    height: 90px;
-    width: auto;
-    background-color: var(--head-bg);
+.site-head a {
+    font-size: 12px;
+    color: white;
+    padding: 15px 35px;
+    margin-right: 30px;
+    border: 1px solid white;
+    border-radius: 30px;
+    text-transform: uppercase;
 }
 
 .site-footer {
