--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ ul {
 }
 
 .logo-section>img {
-    width: 80%;
+    width: 70%;
 }
 
 .navigation img {
@@ -151,6 +151,135 @@ hr {
 
 .site-footer {
     height: 90px;
-    width: auto;
+    width: 100%;
     background-color: var(--footer-bg);
+    display: flex;
+    justify-content: space-between;
+}
+
+.track {
+    width: 15%;
+    height: 100%;
+    display: flex;
+    padding-left: 5px;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.track-img img {
+    width: 40px;
+    margin-right: 5px;
+}
+
+.track-info h5 {
+    color: white;
+}
+
+.track-info span {
+    font-size: 12px;
+    color: var(--small-text);
+}
+
+.track-icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.track-icons i {
+    margin: 0 10px;
+}
+
+.main-controls {
+    max-width: 650px;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    flex-grow: 1;
+}
+
+.track-controls {
+    width: 100%;
+    height: 50px;
+    margin: 5px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.track-controls i {
+    margin: 0 12px;
+    color: white;
+}
+
+.main-controls .container-track-bar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+}
+
+.main-controls .container-track-bar span {
+    font-size: 12px;
+    color: white;
+    font-weight: bold;
+}
+
+.main-controls .track-bar {
+    width: 75%;
+    height: 4px;
+    margin: 0 40px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.white-bar {
+    width: 30%;
+    height: 100%;
+    background-color: white;
+    border-radius: 5px;
+    position: relative;
+}
+
+.gray-bar {
+    width: 70%;
+    height: 100%;
+    background-color: gray;
+    border-radius: 0 5px 5px 0;
+}
+
+.right-controls {
+    color: white;
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+
+
+/*.device-controls {
+    color: white;
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 20px;
+}*/
+
+.device-controls i {
+    margin-right: 10px;
+}
+
+.right-controls .track-bar {
+    width: 50%;
+    height: 4px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    position: relative;
 }
