--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --head-bg: #080B12;
+    --head-bg: #080b12b0;
     --main-bg: #141922;
     --side-bg: #000000;
     --footer-bg: #282828;
@@ -225,6 +225,18 @@ hr {
     color: white;
 }
 
+.site-nav a:after {
+    content: "";
+    position: absolute;
+    bottom: 5px;
+    left: 420px;
+    transform: translate(50%, 50%);
+    width: 50px;
+    height: 2px;
+    background-color: #1db954;
+    border-radius: 1px;
+}
+
 
 /*#endregion*/
 
@@ -309,6 +321,10 @@ hr {
 
 .image-container:hover i {
     opacity: 1;
+}
+
+.image-container img:hover {
+    filter: brightness(0.5);
 }
 
 
