--- a/style.css
+++ b/style.css
@@ -225,12 +225,10 @@ hr {
     color: white;
 }
 
-.site-nav a:after {
+.site-nav a.active:after {
     content: "";
-    position: absolute;
-    bottom: 5px;
-    left: 420px;
-    transform: translate(50%, 50%);
+    display: block;
+    margin: auto;
     width: 50px;
     height: 2px;
     background-color: #1db954;
